--- a/package.json
+++ b/package.json
@@ -25,7 +25,8 @@
     "passport": "^0.4.1",
     "passport-local": "^1.0.0",
     "pug": "2.0.0-beta11",
-    "shortid": "^2.2.15"
+    "shortid": "^2.2.15",
+    "telegraf": "^3.38.0"
   },
   "main": "app.js",
   "keywords": [],
